add box-sizing global override and font family

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -38,3 +38,18 @@ $secondary-light: rgb(168, 168, 168);
 //     // code
 // }
 // @extend %parallax-menu-hero;
+
+*,
+*::after,
+*::before {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body {
+    font-family: $font-stack;
+}
+
+#header {
+    background-color: $primary-color;
+}
