task card styling structure

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -94,3 +94,9 @@ body {
     padding-bottom: 20px;
     border-bottom: #000 2px solid;
 }
+
+.task-card {
+    padding: 20px;
+    border: #000 solid 1px;
+    border-radius: 10px;
+}
