--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -104,6 +104,7 @@ body {
 
 .task-card {
     padding: 20px;
-    border: #000 solid 1px;
+    // border: #000 solid 1px;
     border-radius: 10px;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
