--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -107,4 +107,11 @@ body {
     // border: #000 solid 1px;
     border-radius: 10px;
     box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+    position: relative;
+}
+
+.task-delete {
+    position: absolute;
+    top: 10px;
+    right: 15px;
 }
