add space between task card items

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -105,6 +105,9 @@ body {
     box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
     position: relative;
 }
+.task-card > * {
+    padding-bottom: 5px;
+}
 
 .task-delete {
     position: absolute;
