--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -118,4 +118,50 @@ body {
 
 .add_task_section {
     display: none;
+    /* hide for now */
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(4px);
+    align-items: center;
 }
+
+.new-task-form {
+    width: max-content;
+    max-width: 100vw;
+    max-height: 100vh;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    font-size: 1rem;
+    text-align: start;
+    padding: 1rem 1rem;
+    border: solid 1px #d3d3d3;
+    border-radius: 5px;
+    position: relative;
+    background-color: #fff;
+    overflow-y: scroll;
+}
+.close-form {
+    position: absolute;
+    right: 5px;
+}
+.close-form:hover {
+      cursor: pointer;
+}
+
+.form_title {
+    font-size: 1.5rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    line-height: 1;
+    text-align: center;
+    padding-top: 0;
+    text-transform: capitalize;
+    color: #000;
+    font-weight: 500;
+  }
