--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -120,10 +120,14 @@ body {
 .task-card > * {
     padding-bottom: 5px;
 }
-
+.task-title {
+    font-size: 1.2rem;
+    border-bottom: $primary-dark 1px solid;
+    margin-bottom: 10px;
+}
 .task-delete {
     position: absolute;
-    top: 10px;
+    top: 15px;
     right: 15px;
 }
 
