--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -65,6 +65,29 @@ body {
     align-items: center;
     gap: 20px;
 }
+#addTask {
+    position: relative;
+}
+#add-icon-menu {
+    // display: none;
+    position: absolute;
+    top: 18px;
+    right: 15px;
+    width: 90px;
+    height: 50px;
+    z-index: 9999;
+    border: #000 solid 1px;
+    background-color: white;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    & > img {
+        width: 30px;
+        height: 30px;
+    }
+}
+//MAIN
 #main {
     display: grid;
     grid-template-columns: minmax(150px,1fr) 4fr;
