--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -68,23 +68,28 @@ body {
 #addTask {
     position: relative;
 }
+#add-icon {
+    width: 30px;
+}
 #add-icon-menu {
-    // display: none;
+    display: none;
     position: absolute;
-    top: 18px;
+    top: 24px;
     right: 15px;
     width: 90px;
     height: 50px;
-    z-index: 9999;
+    z-index: 9998;
     border: #000 solid 1px;
     background-color: white;
     border-radius: 10px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
     & > img {
-        width: 30px;
-        height: 30px;
+        width: 25px;
+        height: 25px;
+    }
+    &.icon-menu-toggle {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
     }
 }
 //MAIN
