add project form, new functions to close and clear task/project forms separately, and next need to figure out state for projects

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -167,7 +167,8 @@ body {
 }
 
 
-.add_task_section {
+.add_task_section,
+.add_project_section {
     display: none;
     /* hide for now */
     width: 100vw;
