--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -182,7 +182,7 @@ body {
     align-items: center;
 }
 
-.new-task-form {
+.form-container {
     width: max-content;
     max-width: 100vw;
     max-height: 100vh;
@@ -198,7 +198,7 @@ body {
     background-color: #fff;
     overflow-y: scroll;
 }
-.new-task-form > * {
+.form-container > * {
     padding-bottom: 1rem;
 }
 .close-form {
