--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -92,6 +92,72 @@ body {
         align-items: center;
     }
 }
+
+$shadowSize: 23px;
+$shadowColor: $primary-color;
+.aside-item {
+    position: relative;
+    border-radius: 4px;
+    &:hover {
+        background-image: linear-gradient(to left, rgba(255,0,0,0), $primary-color);
+        // color: white;
+      }
+}
+
+#dash-aside {
+    padding: .5rem;
+    text-align: center;
+    transition: all 300ms;
+}
+.aside-selected {
+    background: $primary-color;
+    color: white;
+    box-shadow: 10px 0 1px $primary-color;
+    &:before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        right: -8px;
+        width: 23px;
+        height: 23px;
+        background-color: $primary-color;
+        transform: translate(50%, -50%) rotate(45deg);
+        clip-path: polygon(
+          -#{$shadowSize} -#{$shadowSize}, 
+      calc(100% + #{$shadowSize}) -#{$shadowSize}, 
+          calc(100% + #{$shadowSize}) calc(100% + #{$shadowSize})
+        );
+      }
+}
+#project-accordion{
+  cursor: pointer;
+  background: none;
+  background-image: linear-gradient(to left, rgba(255,0,0,0), $primary-color);
+  color: white;
+  width: 100%;
+  border: none;
+  transition: 0.4s;
+  padding: .5rem;
+    transition: all 300ms;
+    &:hover {
+        background-image: linear-gradient(to left, rgba(255,0,0,0), $primary-color);
+        // color: white;
+      }
+    &.active{
+        background-color:  $primary-color;
+        color: white;
+    }
+}
+#project-panel-display {
+  padding: 0 8px;
+  display: none;
+  background-color: white;
+  overflow: hidden;
+}
+#project-panel-list > * {
+    padding: 8px 0;
+}
+
 //MAIN
 #main {
     display: grid;
@@ -107,18 +173,6 @@ body {
     gap: 20px;
     box-shadow: rgba(9, 30, 66, 0.25) 0px 2px 4px 2px;
     z-index: 3;
-}
-.aside-item {
-    padding: .5rem;
-    transition: all 300ms;
-    &:hover {
-        background-image: linear-gradient(to left, rgba(255,0,0,0), $primary-color);
-        color: white;
-      }
-}
-.aside-selected {
-    background-image: linear-gradient(to left, rgba(255,0,0,0), $primary-color);
-    color: white;
 }
 #main-section {
     grid-column: 2 / 5;
