--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -52,15 +52,15 @@ body {
 @mixin flexJustify($spacing: space-between) {
         display: flex;
         justify-content: $spacing;
-    }
-    
+}
 #header {
     background-color: $primary-color;
     @include flexJustify;
     align-items: center;
-    padding: 10px 20px;
+    padding: 15px 20px 10px;
     color: $primary-light
 }
+#headerLeft,
 #headerRight {
     @include flexJustify;
     align-items: center;
