add logic to load page for all projects view

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -99,18 +99,30 @@ $shadowColor: $primary-color;
 .aside-item {
     position: relative;
     border-radius: 4px;
-    &:hover {
-        
-        background-image: linear-gradient(to left, rgba(255,0,0,0), $primary-color);
-        // color: white;
-      }
+      cursor: pointer;
+      background: $primary-color;
+            background: linear-gradient(90deg, rgba(178,34,34,1) 0%, rgba(178,34,34,1) 90%, rgba(0,0,0,0) 100%);
+    //   background-image: linear-gradient(to left, rgba(255,0,0,0), $primary-color);
+      color: white;
+      border-radius: 4px;
+      width: 100%;
+      border: none;
+      padding: .5rem;
+        transition: ease-in 500ms;
+        &:hover {
+            // background-image: linear-gradient(to left, rgba(255,0,0,0) , $primary-color);
+            background: $primary-color;
+background: linear-gradient(90deg, $primary-color 0%, $primary-color 85%, rgba(0,0,0,0) 100%);
+            // color: white;
+            // text-decoration: underline 0.02rem;
+            // text-underline-offset: 3px;
+          }
+        &.active{
+            background-color:  $primary-color;
+            color: white;
+        }
 }
 
-#dash-aside {
-    padding: .5rem;
-    text-align: center;
-    transition: all 300ms;
-}
 .aside-selected {
     background: $primary-color;
     color: white;
@@ -125,42 +137,41 @@ $shadowColor: $primary-color;
         background-color: $primary-color;
         transform: translate(50%, -50%) rotate(45deg);
         clip-path: polygon(
-          -#{$shadowSize} -#{$shadowSize}, 
-      calc(100% + #{$shadowSize}) -#{$shadowSize}, 
-          calc(100% + #{$shadowSize}) calc(100% + #{$shadowSize})
-        );
-      }
-}
-#project-accordion{
-  cursor: pointer;
-  background: none;
-  background: rgb(178,34,34);
-        background: linear-gradient(90deg, rgba(178,34,34,1) 0%, rgba(178,34,34,1) 80%, rgba(0,0,0,0) 100%);
-//   background-image: linear-gradient(to left, rgba(255,0,0,0), $primary-color);
-  color: white;
-  border-radius: 4px;
-  width: 100%;
-  border: none;
-  transition: 0.4s;
-  padding: .5rem;
-    transition: all 300ms;
+            -#{$shadowSize} -#{$shadowSize}, 
+            calc(100% + #{$shadowSize}) -#{$shadowSize}, 
+            calc(100% + #{$shadowSize}) calc(100% + #{$shadowSize})
+            );
+    }
     &:hover {
-        background-image: linear-gradient(to left, rgba(255,0,0,0), $primary-color);
+        // background-image: linear-gradient(to left, rgba(255,0,0,0) , $primary-color);
+        background: $primary-color;
+        text-decoration: none;
         // color: white;
       }
-    &.active{
-        background-color:  $primary-color;
-        color: white;
-    }
 }
-#project-panel-display {
+#dash-aside {
+    // padding: .5rem;
+    // text-align: center;
+    transition: all 300ms;
+}
+#project-accordion-btn {
+    all:unset;
+}
+div.aside-item#project-panel-display {
   padding: 0 8px;
   display: none;
-  background-color: white;
+//   background-color: $primary-light;
+//   color: $primary-dark;
   overflow: hidden;
+  &:hover {
+    text-decoration: none;
+    // background: $primary-color;
+            // color: white;
+          }
 }
 #project-panel-list > * {
     padding: 8px 0;
+    font-size: .9rem;
 }
 
 //MAIN
@@ -199,7 +210,8 @@ $shadowColor: $primary-color;
     border-bottom: #000 2px solid;
 }
 
-.task-card {
+.task-card,
+.project-card {
     padding: 20px;
     // border: #000 solid 1px;
     border-radius: 10px;
@@ -210,16 +222,19 @@ $shadowColor: $primary-color;
         box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px 3px, rgba(9, 30, 66, 0.08) 0px 0px 0px 3px;
     }
 }
-.task-card > * {
+.task-card > *,
+.project-card > *{
     padding-bottom: 5px;
 }
-.task-title {
+.task-title,
+.project-title {
     font-size: 1.2rem;
     font-weight: bold;
     border-bottom: $primary-dark 1px solid;
     margin-bottom: 10px;
 }
-.task-delete {
+.task-delete,
+.project-delete {
     position: absolute;
     top: 15px;
     right: 15px;
