--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -240,6 +240,35 @@ background: linear-gradient(90deg, $primary-color 0%, $primary-color 85%, rgba(0
     border-bottom: $primary-dark 1px solid;
     margin-bottom: 10px;
 }
+.task-title-dash {
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+$projectShadowSize: 23px;
+.project-title-dash {
+    font-size: 1rem;
+    font-style: italic;
+    cursor: pointer;
+    border-bottom: $primary-dark 1px solid;
+    margin-bottom: 10px;
+    &:hover {
+        &::after {
+            content: "";
+            position: absolute;
+            top: 55px;
+            left: 2px;
+            width: 14px;
+            height: 14px;
+            background-color: $primary-color;
+            transform: translate(50%, -50%) rotate(226deg);
+            clip-path: polygon(
+                -#{$projectShadowSize} -#{$projectShadowSize}, 
+                calc(100% + #{$projectShadowSize}) -#{$projectShadowSize}, 
+                calc(100% + #{$projectShadowSize}) calc(100% + #{$projectShadowSize})
+                );
+        }
+    }
+}
 .task-delete,
 .project-delete {
     position: absolute;
