--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -66,6 +66,12 @@ body {
     align-items: center;
     gap: 20px;
 }
+.nav-menu {
+    list-style: none;
+    @include flexJustify();
+    align-items: center;
+    gap: 20px;
+}
 #addBtn {
     position: relative;
 }
@@ -362,4 +368,45 @@ $projectShadowSize: 23px;
 .new-task-buttons > *,
 .new-project-buttons > * {
     padding: .5rem;
+}
+
+@media(max-width:560px) {
+    .hamburger {
+        display: block;
+    }
+
+    .hamburger.active .bar:nth-child(2){
+        opacity: 0;
+    }
+    .hamburger.active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+    .hamburger.active .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+    }
+    .nav-menu {
+        position: fixed;
+        right: -100%;
+        top: 108px;
+        gap: 0;
+        flex-direction: column;
+        background-color: white;
+        /* background-color: black; */
+        color: white;
+        width: 100%;
+        text-align: center;
+        transition: 0.3s;
+    }
+    .nav-item {
+        margin: 16px 0;
+    }
+    .nav-link {
+        color:#0c4a6e;
+    }
+    .nav-menu.active {
+        right: 0;
+    }
+    // .dark * .nav-menu {
+    //     background-color: #000;
+    // }
 }
