--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -64,7 +64,7 @@ body {
 #headerRight {
     @include flexJustify;
     align-items: center;
-    gap: 20px;
+    gap: 15px;
 }
 .nav-menu {
     list-style: none;
@@ -99,23 +99,23 @@ body {
         align-items: center;
     }
 }
-//HAMBURGER
+// HAMBURGER
 // header.dark > .header > .hamburger > .bar  {
 //     background-color: white;
 // }
-// .hamburger {
-//     display: none;
-//     cursor: pointer;
-// }
-// .bar {
-//     display:block;
-//     width: 25px;
-//     height: 3px;
-//     margin: 5px auto;
-//     -webkit-transition: all 0.3s ease-in-out;
-//     transition: all 0.3s ease-in-out;
-//     background-color: black;
-// }
+.hamburger {
+    display: none;
+    cursor: pointer;
+}
+.bar {
+    display:block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: $primary-light;
+}
 
 $shadowSize: 23px;
 $shadowColor: $primary-color;
@@ -370,7 +370,8 @@ $projectShadowSize: 23px;
     padding: .5rem;
 }
 
-@media(max-width:560px) {
+//560px
+@media(max-width:778px) {
     .hamburger {
         display: block;
     }
@@ -409,4 +410,30 @@ $projectShadowSize: 23px;
     // .dark * .nav-menu {
     //     background-color: #000;
     // }
+}
+@media(max-width:600px) {
+    #header-site-title {
+        display: none;
+    }
+    #add-icon-menu {
+        display: none;
+        position: absolute;
+        top: 26px;
+        left: 15px;
+        width: 90px;
+        height: 50px;
+        z-index: 9998;
+        border: #000 solid 1px;
+        background-color: white;
+        border-radius: 10px;
+        & > img {
+            width: 25px;
+            height: 25px;
+        }
+        &.icon-menu-toggle {
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+        }
+    }
 }
