--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -75,6 +75,12 @@ body {
     align-items: center;
     gap: 20px;
 }
+.nav-menu > * {
+    &:hover {
+        border-bottom: 1px solid $primary-light;
+        padding-bottom: 2px;
+    }
+}
 #addBtn {
     position: relative;
 }
